# opengl-sandbox

./: .gitignore  CMakeLists.txt  OpenGL Renderer.sln  OpenGL Renderer.vcxproj  OpenGL Renderer.vcxproj.filters
contrib/src/: glad.c
data/: cubeShaderVert.glsl  defaultShaderVert.glsl  lightSourceShaderFrag.glsl  lightingShaderFrag.glsl  lightingShaderVert.glsl  shader.fs  shader.vs
data/shaders/: cubeFrag.glsl  cubeVert.glsl  lightFrag.glsl  lightVert.glsl
src/: Shader.cpp  Shader.h  main.cpp
src/app/: App.cpp  App.h  Player.cpp  Player.h
src/engine/: Camera.cpp  Camera.h  FileSystem.h  InputManager.cpp  InputManager.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/engine/contrib/include/glad/: glad.h
src/engine/contrib/src/: glad.c
